force-app/main/default/objects/Route__c/Route__c.object-meta.xml
<CustomObject>
    <label>Route</label>
    <nameField>
        <displayFormat>ROT-{0000}</displayFormat>
        <label>Route Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>