force-app/main/default/objects/Route__c/fields/Airport_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Airport_of_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport of Loading</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>