force-app/main/default/objects/Route__c/fields/Cargo_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Readiness__c</fullName>
    <label>Cargo Readiness</label>
    <type>Date</type>
</CustomField>