force-app/main/default/objects/Route__c/fields/Cargo_Weight__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Weight__c</fullName>
    <label>Cargo Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>