force-app/main/default/objects/Route__c/fields/Chargeable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight__c</fullName>
    <formula>IF( Total_Gross_Weight_KGs__c &gt;  Total_Volumetric_Weight__c , Total_Gross_Weight_KGs__c , Total_Volumetric_Weight__c )</formula>
    <label>Chargeable Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>