force-app/main/default/objects/Route__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <label>Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>