force-app/main/default/objects/Route__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>For developer use only.</description>
    <label>Index</label>
    <length>5</length>
    <type>Text</type>
</CustomField>