force-app/main/default/objects/Route__c/fields/Kind_Of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Kind_Of_Shipment__c</fullName>
    <label>Kind Of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>FCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>