force-app/main/default/objects/Route__c/fields/Opportunity_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Enquiry__c</fullName>
    <label>Opportunity Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>