force-app/main/default/objects/Route__c/fields/Place_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Discharge</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipLabel>Routes (Place of Discharge)</relationshipLabel>
    <relationshipName>Routes1</relationshipName>
    <type>Lookup</type>
</CustomField>