force-app/main/default/objects/Route__c/fields/Port_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Destination</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Routes (Port of Destination)</relationshipLabel>
    <relationshipName>Routes1</relationshipName>
    <type>Lookup</type>
</CustomField>