force-app/main/default/objects/Route__c/fields/Port_of_loading__c.field-meta.xml
<CustomField>
    <fullName>Port_of_loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>