force-app/main/default/objects/Route__c/fields/Regular_Routing__c.field-meta.xml
<CustomField>
    <fullName>Regular_Routing__c</fullName>
    <label>Regular Routing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>