force-app/main/default/objects/Route__c/fields/Regular_Routing_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Regular_Routing_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regular Routing Lookup</label>
    <referenceTo>Regular_Routing__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>