force-app/main/default/objects/Route__c/fields/routenames__c.field-meta.xml
<CustomField>
    <fullName>routenames__c</fullName>
    <formula>Port_of_loading__r.Name + &quot; - &quot; +  Port_of_Destination__r.Name + &quot; - &quot; +   INCO_Term__r.Name</formula>
    <label>routenames</label>
    <type>Text</type>
</CustomField>