force-app/main/default/objects/Route__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P2P</fullName>
            </value>
            <value>
                <fullName>D2P</fullName>
            </value>
            <value>
                <fullName>P2D</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>