force-app/main/default/objects/Route__c/fields/Total_CBM__c.field-meta.xml
<CustomField>
    <fullName>Total_CBM__c</fullName>
    <label>Total CBM</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>