force-app/main/default/objects/Route__c/fields/Total_Volumetric_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Volumetric_Weight__c</fullName>
    <label>Total Volumetric Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>