force-app/main/default/objects/Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enquiry__c</columns>
    <columns>Port_of_loading__c</columns>
    <columns>Port_of_Destination__c</columns>
    <columns>Commodity__c</columns>
    <columns>Cargo_Weight__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>